# sisyphus-handbrake

./: .gitignore  README.md  client.py  convert.py  example.py  pyproject.toml
handbrake/: parser.py  progress.py
handbrake/schema/: convert.py  handbrake.schema.json  handbrake.schema.yaml
schema/: handbrake.schema.json  handbrake.schema.yaml
