[tool.poetry]
name = "sisyphus-handbrake"
version = "1.0.0"
description = "A Python wrapper for the `HandBrakeCLI` binary. Features JSON schema validation, slightly above-average documentation, and a very pretty progress bar."
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
readme = "README.md"
packages = [
    {include = "handbrake"}
]
include = [
    "handbrake/schema/handbrake.schema.json",
    "handbrake/schema/handbrake.schema.yaml",
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
python-box = "^7.1.1"
jsonschema = "^4.19.1"
loguru = "^0.7.2"
sisyphus-ffmpeg = {git = "https://github.com/JamesTheBard/sisyphus-ffmpeg.git"}
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
